--- a/remote/package.json
+++ b/remote/package.json
@@ -10,6 +10,7 @@
     "serve": "vite preview --port 5001 --strictPort"
   },
   "dependencies": {
+    "jotai": "^2.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
